res/examples/invalid/let_decl_in_grouping_parans.eg
(let a = 123;);

// out: SyntaxError: unexpected "let"; expected: ["\"{\"", "\"[\"", "\"(\"", "\")\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "identifier", "string", "number"]
// out: SyntaxError: unexpected ")"; expected: ["\"{\"", "\"[\"", "\"(\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "\"fn\"", "\"let\"", "\"const\"", "\"type\"", "\"assert_type\"", "\"return\"", "identifier", "string", "number"]